# simple_ROS_node

./: CMakeLists.txt  package.xml  readme.md
src/: emitter.cpp  reciever.cpp
